--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,27 @@
 *.lai
 *.la
 *.a
+
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
+
+# Exclude the build directory
+build/*
+ 
+# Exclude temp nibs and swap files
+*~.nib
+*.swp
+ 
+# Exclude OS X folder attributes
+.DS_Store
+ 
+# Exclude user-specific XCode 3 and 4 files
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcworkspace
+xcuserdata
